# or-model

./: .gitignore  NOTES.md  TODO.md  benchmark_solvers.py  demo.py  model_team_ha_proposal.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.py  test_fast_solver.py
demo/: demo.py  fd_scraper.py  markets.json
demos/: demo_1x2.py  demo_ah_ou.py
dev/: chatgpt.md  dump_fixtures.py  dump_positions_heatmap.py  events.json  fd_scraper.py  fd_scraper2.py  fetch_data.py  poisson_api.py  poisson_common.py  poisson_helpers.py  poisson_kernel.py  poisson_simulator.py  poisson_solver.py  poisson_test.py  scipy_solver.py  solver-data.json  solver.py  test_integer_handicaps.py  test_matrix_multiplication.py  test_simulate_scores.py
fixtures/: ENG1.json  ENG2.json  ENG3.json  ENG4.json  ITA1.json  SCO2.json  SCO3.json  SCO4.json  SPA1.json
model/: common.py  kernel.py  main.py  markets.py  simulator.py  solver.py  solver_fast.py  state.py  stats.py  test.py  test_simulator.py  test_solver.py  utils.py
outrights/: api.py  helpers.py  kernel.py  markets.py  simulator.py  solver.py  state.py  stats.py  test.py
outrights/models/: __init__.py  simulator.py  solver.py
proposals/: additive_home_advantage.md  team_specific_additive_home_advantage.md
tests/: kernel.py  markets.py  simulator.py  solver.py  state.py  utils.py
